--- a/trunk/WebContent/WEB-INF/src/messages.properties
+++ b/trunk/WebContent/WEB-INF/src/messages.properties
@@ -20,3 +20,6 @@ user.name.default = \ubc30\uc1a1\uc2dc\uc5d0 \ud544\uc694\ud569\ub2c8\ub2e4.
 # category form error messages
 error.input.category = Invalid user input 
 error.required.category.name = Name field is mandatory.
+
+# notice 
+error.update.notice = \uc5c5\ub370\uc774\ud2b8\uc5d0 \uc2e4\ud328\ud588\uc2b5\ub2c8\ub2e4.
